--- a/graphql-react-query/package.json
+++ b/graphql-react-query/package.json
@@ -15,7 +15,8 @@
     "graphql-request": "^7.1.2",
     "graphql-tag": "^2.12.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
